# majdool

./: Cargo.toml  README.md  Untitled.graffle  majdool.graffle
majdool-lib/: Cargo.toml
majdool-lib/migrations/: 1.up
majdool-lib/proptest-regressions/fs/: model.txt
majdool-lib/src/: api.rs  database.rs  filesystem.rs  fs.rs  fsutil.rs  lib.rs  media.rs  model.rs  util.rs
majdool-lib/src/db/: database.rs  model.rs
majdool-lib/src/fs/: filesystem.rs  fsutil.rs  model.rs
manual-syncer/: Cargo.toml
manual-syncer/src/: main.rs
src/: listen.rs  main.rs  model.rs
syncer/: Cargo.toml
syncer/src/: listen.rs  main.rs
