[package]
name = "majdool"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
blarg = "1.0.4"
sea-query = "1.0.0-rc.1"
sea-query-sqlx = { version = "0.8.0-rc.9", features = ["sqlx-postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
sqlx = "0.8"
notify = "8.2.0"
