[package]
name = "majdool-lib"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
futures = "0.3.28"
blarg = "1.0.4"
sea-query = "1.0.0-rc.1"
sea-query-sqlx = { version = "0.8.0-rc.9", features = ["sqlx-postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
sqlx = "0.8"
notify = "8.2.0"
